# timetasker

./: README.md  main.py  pomodoro_timer.tcss  pyproject.toml  requirements.txt  tox.ini
pommo/: main.py
timetasker/: config.py  globals.py  main.py  timetasker.tcss  timeutils.py
timetasker/platform/: __init__.py  base.py  posix.py
timetasker/platform_specific/: fallback.py  windows.py
