[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "timetasker"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.56"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^4.0.1"

[tool.poetry.scripts]
timetasker = "timetasker.main:main_func"

[tool.black]
line-length = 120

